Refactor tests to reuse properties setup and improve clarity
Extracted repetitive `ProjectProperties` setup into a helper method to reduce code duplication. Simplified glossary loading tests using a common utility function. Enhanced XML comparison security by disabling DOCTYPE declarations.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>